--- a/src/app/features/post-login/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue-list/issue-list.component.html
@@ -1,4 +1,4 @@
-<h3 class="mat-headline-4">Danh sách kế hoạch kiểm tra năm học</h3>
+<h5 class="mat-headline-5 fw-medium">Danh sách kế hoạch kiểm tra năm học</h5>
 <ng-container *ngIf="issues">
   <div class="card">
     <p-table
