--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-detail/inspection-plan-detail.component.html
@@ -17,44 +17,69 @@
     </p-dialog>
     <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
     <div class="row">
-      <div class="form-content col-md-8 d-flex flex-column justify-content-between" *ngIf="inspectionPlanDetail">
+      <div
+        class="form-content col-md-8 d-flex flex-column justify-content-between"
+        *ngIf="inspectionPlanDetail"
+      >
         <div class="row mb-2">
           <div class="col-md-9">
             <div class="inspection-plan-name mb-1">
-              <span>Tên quyết định kiểm tra</span>
-              <p class="fw-bolder">{{inspectionPlanDetail.inspectionPlan.inspectionPlanName}}</p>
+              <span class="mb-2" style="color: #616161"
+                >Tên quyết định kiểm tra</span
+              >
+              <p class="fw-bold" style="font-size: 18px">
+                {{ inspectionPlanDetail.inspectionPlan.inspectionPlanName }}
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <span>Ngày bắt đầu</span>
-            <p class="fw-bolder">{{inspectionPlanDetail.inspectionPlan.startDate | date:"dd/MM/yyyy"}}</p>
+            <p class="fw-bolder">
+              {{
+                inspectionPlanDetail.inspectionPlan.startDate
+                  | date : "dd/MM/yyyy"
+              }}
+            </p>
           </div>
         </div>
         <div class="row mb-2">
           <div class="col-md-9">
             <div class="inspection-plan-name mb-1">
               <span>Tên trường</span>
-              <p class="fw-bolder">{{inspectionPlanDetail.inspectionPlan.school.schoolName}}</p>
+              <p class="fw-bolder">
+                {{ inspectionPlanDetail.inspectionPlan.school.schoolName }}
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <span>Ngày kết thúc</span>
-            <p class="fw-bolder">{{inspectionPlanDetail.inspectionPlan.endDate | date:"dd/MM/yyyy"}}</p>
+            <p class="fw-bolder">
+              {{
+                inspectionPlanDetail.inspectionPlan.endDate
+                  | date : "dd/MM/yyyy"
+              }}
+            </p>
           </div>
         </div>
         <div class="row mb-2">
           <div class="col-md-9">
             <div class="inspection-plan-name mb-1">
               <span>Chi tiết</span>
-              <p class="fw-bolder">{{inspectionPlanDetail.inspectionPlan.description}}</p>
+              <p class="fw-bolder">
+                {{ inspectionPlanDetail.inspectionPlan.description }}
+              </p>
             </div>
           </div>
           <div class="col-md-3">
             <span>Trạng thái</span>
-            <br/>
+            <br />
             <p-tag
               class="status"
-              [severity]="getStatusSeverity(inspectionPlanDetail.inspectionPlan.status.statusName)"
+              [severity]="
+                getStatusSeverity(
+                  inspectionPlanDetail.inspectionPlan.status.statusName
+                )
+              "
               [rounded]="true"
             >
               {{ inspectionPlanDetail.inspectionPlan.status.statusName }}
@@ -62,43 +87,64 @@
           </div>
         </div>
         <h5 class="mb-2">Tài liệu công văn</h5>
-        <div class="file-item py-1 d-flex"
-             (click)="openNewTab(inspectionPlanDetail.inspectionPlan.documents[0]?.documentLink)">
-          <div class="file-item-icon d-flex justify-content-center align-items-center">
-            <img src="assets/img/pdf_logo.svg" alt=""/>
+        <div
+          class="file-item py-1 d-flex"
+          (click)="
+            openNewTab(
+              inspectionPlanDetail.inspectionPlan.documents[0]?.documentLink
+            )
+          "
+        >
+          <div
+            class="file-item-icon d-flex justify-content-center align-items-center"
+          >
+            <img src="assets/img/pdf_logo.svg" alt="" />
           </div>
           <div class="row col-md-10 d-flex align-items-end mb-3">
             <div class="col-md-8">
               <p class="mb-0">
                 <span>Tên tài liệu: </span>
-                <span class="fw-bold">{{ inspectionPlanDetail.inspectionPlan.documents[0]?.documentName}}</span>
+                <span class="fw-bold">{{
+                  inspectionPlanDetail.inspectionPlan.documents[0]?.documentName
+                }}</span>
               </p>
               <p class="mb-0">
                 <span>Loại tài liệu: </span>
-                <span
-                  class="fw-bold">{{ inspectionPlanDetail.inspectionPlan.documents[0]?.documentType.documentTypeName}}</span>
+                <span class="fw-bold">{{
+                  inspectionPlanDetail.inspectionPlan.documents[0]?.documentType
+                    .documentTypeName
+                }}</span>
               </p>
               <p class="mb-0">
                 <span>Mã tài liệu: </span>
-                <span class="fw-bold">{{ inspectionPlanDetail.inspectionPlan.documents[0]?.documentCode}}</span>
+                <span class="fw-bold">{{
+                  inspectionPlanDetail.inspectionPlan.documents[0]?.documentCode
+                }}</span>
               </p>
             </div>
             <div class="col-md-4 text-end">
               <p class="mb-0">
                 <span>Kích thước: </span>
-                <span
-                  class="fw-bold">{{ inspectionPlanDetail.inspectionPlan.documents[0]?.size  | fileSizePipe:'MB' }}</span>
+                <span class="fw-bold">{{
+                  inspectionPlanDetail.inspectionPlan.documents[0]?.size
+                    | fileSizePipe : "MB"
+                }}</span>
               </p>
               <p class="mb-0">
                 <span>Ngày tạo: </span>
-                <span
-                  class="fw-bold">{{ inspectionPlanDetail.inspectionPlan.documents[0]?.uploadedDate | date : "MM/dd/yyyy" }}</span>
+                <span class="fw-bold">{{
+                  inspectionPlanDetail.inspectionPlan.documents[0]?.uploadedDate
+                    | date : "MM/dd/yyyy"
+                }}</span>
+              </p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4 d-flex justify-content-center h-100">
-        <app-inspection-plan-inspector-list class="w-100 h-100" [selectedInspectors]="inspectionPlanDetail.inspectors"
+        <app-inspection-plan-inspector-list
+          class="w-100 h-100"
+          [selectedInspectors]="inspectionPlanDetail.inspectors"
         ></app-inspection-plan-inspector-list>
       </div>
     </div>
