--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -1,44 +1,61 @@
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css">
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
+/>
 <p-toast key="error" position="top-right"></p-toast>
 <h2>Tra cứu kế hoạch thực hiện</h2>
 <div class="table-container">
-  <div class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between">
+  <div
+    class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
+  >
     <div class="form-group col-md-4" *ngIf="!advanceSearch">
-      <input type="text"
-             name="globalSearch"
-             id="globalSearch"
-             class="form-control fontAwesome h-100"
-             [(ngModel)]="planName"
-             (keyup)="loadDocuments()"
-             pInputText
-             placeholder="&#xF002; Tra cứu nhanh theo tên kế hoạch"
-      >
+      <input
+        type="text"
+        name="globalSearch"
+        id="globalSearch"
+        class="form-control fontAwesome h-100"
+        [(ngModel)]="planName"
+        (keyup)="loadDocuments()"
+        pInputText
+        placeholder="&#xF002; Tra cứu nhanh theo tên kế hoạch"
+      />
     </div>
     <div *ngIf="advanceSearch" class="col-md-10">
       <div class="row">
         <div class="col-md-4">
           <div class="w-100">
             <label class="fw-medium">Tên kế hoạch</label>
-            <input class="form-control"
-                   [(ngModel)]="planName"
-                   name="planName"
-                   id="planName"
-                   (keyup)="loadDocuments()"
-                   pInputText
-                   placeholder="(VD): Kế hoạch của Trường Mầm Non Ánh Sao"
-            >
+            <input
+              class="form-control"
+              [(ngModel)]="planName"
+              name="planName"
+              id="planName"
+              (keyup)="loadDocuments()"
+              pInputText
+              placeholder="(VD): Kế hoạch của Trường Mầm Non Ánh Sao"
+            />
           </div>
         </div>
         <div class="col-md-4">
           <mat-form-field class="w-100">
             <mat-label>Khoảng thời gian tạo</mat-label>
             <mat-date-range-input [rangePicker]="picker1">
-              <input matStartDate [(ngModel)]="creationStartDateTime" placeholder="Bắt đầu">
-              <input matEndDate [(ngModel)]="creationEndDateTime" placeholder="Kết thúc"
-                     (dateChange)="loadDocuments()"
-              >
+              <input
+                matStartDate
+                [(ngModel)]="creationStartDateTime"
+                placeholder="Bắt đầu"
+              />
+              <input
+                matEndDate
+                [(ngModel)]="creationEndDateTime"
+                placeholder="Kết thúc"
+                (dateChange)="loadDocuments()"
+              />
             </mat-date-range-input>
-            <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="picker1"
+            ></mat-datepicker-toggle>
             <mat-date-range-picker #picker1></mat-date-range-picker>
           </mat-form-field>
         </div>
@@ -46,20 +63,37 @@
           <mat-form-field class="w-100">
             <mat-label>Khoảng hạn nộp</mat-label>
             <mat-date-range-input [rangePicker]="picker2">
-              <input matStartDate [(ngModel)]="deadlineStartDateTime" placeholder="Bắt đầu">
-              <input matEndDate [(ngModel)]="deadlineEndDateTime" placeholder="Kết thúc"
-                     (dateChange)="loadDocuments()"
-              >
+              <input
+                matStartDate
+                [(ngModel)]="deadlineStartDateTime"
+                placeholder="Bắt đầu"
+              />
+              <input
+                matEndDate
+                [(ngModel)]="deadlineEndDateTime"
+                placeholder="Kết thúc"
+                (dateChange)="loadDocuments()"
+              />
             </mat-date-range-input>
-            <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="picker2"
+            ></mat-datepicker-toggle>
             <mat-date-range-picker #picker2></mat-date-range-picker>
           </mat-form-field>
         </div>
       </div>
     </div>
-    <div class="text-end justify-content-end"
-         [ngClass]="{'col-md-2 d-flex align-items-center': advanceSearch, 'col-md-3 ': !advanceSearch}">
-      <button (click)="onAdvanceSearch()" pButton>{{advanceSearchButtonText}}</button>
+    <div
+      class="text-end justify-content-end"
+      [ngClass]="{
+        'col-md-2 d-flex align-items-center': advanceSearch,
+        'col-md-3 ': !advanceSearch
+      }"
+    >
+      <button (click)="onAdvanceSearch()" pButton>
+        {{ advanceSearchButtonText }}
+      </button>
     </div>
     <div *ngIf="advanceSearch" class="col-md-10">
       <div class="row">
@@ -68,14 +102,18 @@
           <p-dropdown
             [options]="issueDropDowns"
             [(ngModel)]="currentIssueSelected"
-            optionLabel="issueName" [filter]="true"
+            optionLabel="issueName"
+            [filter]="true"
             filterBy="issueName"
             [showClear]="true"
             placeholder="Chọn 1 kế hoạch kiểm tra"
             (onChange)="loadDocuments()"
           >
             <ng-template pTemplate="selectedItem">
-              <div class="flex align-items-center gap-2" *ngIf="currentIssueSelected">
+              <div
+                class="flex align-items-center gap-2"
+                *ngIf="currentIssueSelected"
+              >
                 <div>{{ currentIssueSelected.issueName }}</div>
               </div>
             </ng-template>
@@ -91,7 +129,8 @@
           <p-dropdown
             [options]="schools"
             [(ngModel)]="selectedSchool"
-            optionLabel="schoolName" [filter]="true"
+            optionLabel="schoolName"
+            [filter]="true"
             filterBy="schoolName"
             [showClear]="true"
             placeholder="Chọn 1 trường"
@@ -120,115 +159,204 @@
             (onChange)="loadDocuments()"
           >
             <ng-template let-status pTemplate="item">
-              <p-tag [severity]="getStatusSeverity(status.value)" [value]="status.label"></p-tag>
+              <p-tag
+                [severity]="getStatusSeverity(status.value)"
+                [value]="status.label"
+              ></p-tag>
             </ng-template>
           </p-dropdown>
         </div>
       </div>
     </div>
-    <div *ngIf="advanceSearch" class="d-flex justify-content-end align-items-end col-md-2">
+    <div
+      *ngIf="advanceSearch"
+      class="d-flex justify-content-end align-items-end col-md-2"
+    >
       <button pButton class="reset-button" (click)="reset()">Reset</button>
     </div>
   </div>
   <div class="table-content">
     <table class="table p-2 table-hover align-middle">
       <thead>
-      <tr>
-        <th (click)="onSort('initiationPlanName')">
-          <div class="header-container">
-            <span class="icon-text">Tên kế hoạch</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'initiationPlanName' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'initiationPlanName' && sortDirection === 'desc'"></i>
-          </div>
-        </th>
-        <th (click)="onSort('issue.createdDate')">
-          <div class="header-container">
-            <span class="icon-text">Kế hoạch kiểm tra</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'issue.createdDate' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'issue.createdDate' && sortDirection === 'desc'"></i>
-          </div>
-        </th>
+        <tr>
+          <th (click)="onSort('initiationPlanName')">
+            <div class="header-container">
+              <span class="icon-text">Tên kế hoạch</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="
+                  sortBy === 'initiationPlanName' && sortDirection === 'asc'
+                "
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="
+                  sortBy === 'initiationPlanName' && sortDirection === 'desc'
+                "
+              ></i>
+            </div>
+          </th>
+          <th (click)="onSort('issue.createdDate')">
+            <div class="header-container">
+              <span class="icon-text">Kế hoạch kiểm tra</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="
+                  sortBy === 'issue.createdDate' && sortDirection === 'asc'
+                "
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="
+                  sortBy === 'issue.createdDate' && sortDirection === 'desc'
+                "
+              ></i>
+            </div>
+          </th>
 
-        <th (click)="onSort('school.schoolName')">
-          <div class="header-container">
-            <span class="icon-text">Trường</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'school.schoolName' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'school.schoolName' && sortDirection === 'desc'"></i>
-          </div>
+          <th (click)="onSort('school.schoolName')">
+            <div class="header-container">
+              <span class="icon-text">Trường</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="
+                  sortBy === 'school.schoolName' && sortDirection === 'asc'
+                "
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="
+                  sortBy === 'school.schoolName' && sortDirection === 'desc'
+                "
+              ></i>
+            </div>
+          </th>
+          <th (click)="onSort('createdDate')">
+            <div class="header-container">
+              <span class="icon-text">Ngày tạo</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="sortBy === 'createdDate' && sortDirection === 'asc'"
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="sortBy === 'createdDate' && sortDirection === 'desc'"
+              ></i>
+            </div>
+          </th>
+          <th (click)="onSort('deadline')">
+            <div class="header-container">
+              <span class="icon-text">Hạn nộp</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="sortBy === 'deadline' && sortDirection === 'asc'"
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="sortBy === 'deadline' && sortDirection === 'desc'"
+              ></i>
+            </div>
+          </th>
+          <th (click)="onSort('status')">
+            <div class="header-container">
+              <span class="icon-text">Trạng thái</span>
+              <i
+                class="bi bi-sort-up"
+                *ngIf="sortBy === 'status' && sortDirection === 'asc'"
+              ></i>
+              <i
+                class="bi bi-sort-down"
+                *ngIf="sortBy === 'status' && sortDirection === 'desc'"
+              ></i>
+            </div>
+          </th>
 
-
-        </th>
-        <th (click)="onSort('createdDate')">
-          <div class="header-container">
-            <span class="icon-text">Ngày tạo</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'createdDate' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'createdDate' && sortDirection === 'desc'"></i>
-          </div>
-        </th>
-        <th (click)="onSort('deadline')">
-          <div class="header-container">
-            <span class="icon-text">Hạn nộp</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'deadline' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'deadline' && sortDirection === 'desc'"></i>
-          </div>
-        </th>
-        <th (click)="onSort('status')">
-          <div class="header-container">
-            <span class="icon-text">Trạng thái</span>
-            <i class="bi bi-sort-up" *ngIf="sortBy === 'status' && sortDirection === 'asc'"></i>
-            <i class="bi bi-sort-down" *ngIf="sortBy === 'status' && sortDirection === 'desc'"></i>
-          </div>
-        </th>
-
-        <th></th>
-      </tr>
-      <span *ngIf="totalElements == 0">Không tìm thấy bản ghi nào phù hợp</span>
-
+          <th></th>
+        </tr>
+        <span *ngIf="totalElements == 0"
+          >Không tìm thấy bản ghi nào phù hợp</span
+        >
       </thead>
       <tbody *ngIf="schoolInitPlans && schoolInitPlans.length > 0" class="px-2">
-      <tr
-        *ngFor="
-          let plan of schoolInitPlans
-            | paginate
-              : {
-                  itemsPerPage: pageSize,
-                  currentPage: pageNo,
-                  totalItems: totalElements
-                };
-          let i = index
-        "
-      >
-        <td class="py-4 px-2" pTooltip="{{plan.initiationPlanName}}"
-            tooltipPosition="top">{{ plan.initiationPlanName }}</td>
-        <td class="py-4 px-2" pTooltip="{{plan.issueName}}" tooltipPosition="top">{{ plan.issueName }}</td>
-        <td class="py-4 px-2" pTooltip="{{plan.schoolName}}" tooltipPosition="top">{{ plan.schoolName }}</td>
-        <td class="py-4 px-2"> {{ plan.createdDate  | date : "dd/MM/yyyy" }}</td>
-        <td class="py-4 px-2">{{ plan.deadline | date : "dd/MM/yyyy" }}</td>
-        <td class="py-4 px-2">
-          <p-tag [severity]="getStatusSeverity(plan?.status?.statusId)" [value]="plan.statusName"></p-tag>
-        </td>
-        <td class="py-3 px-2">
-          <button class="action-button" type="button" (click)="onDetail(plan.initiationPlanId)">
-            <i class="bi bi-info-circle-fill"></i>
-          </button>
-        </td>
-      </tr>
+        <tr
+          *ngFor="
+            let plan of schoolInitPlans
+              | paginate
+                : {
+                    itemsPerPage: pageSize,
+                    currentPage: pageNo,
+                    totalItems: totalElements
+                  };
+            let i = index
+          "
+        >
+          <td
+            class="py-4 px-2"
+            pTooltip="{{ plan.initiationPlanName }}"
+            tooltipPosition="top"
+          >
+            {{ plan.initiationPlanName }}
+          </td>
+          <td
+            class="py-4 px-2"
+            pTooltip="{{ plan.issueName }}"
+            tooltipPosition="top"
+          >
+            {{ plan.issueName }}
+          </td>
+          <td
+            class="py-4 px-2"
+            pTooltip="{{ plan.schoolName }}"
+            tooltipPosition="top"
+          >
+            {{ plan.schoolName }}
+          </td>
+          <td class="py-4 px-2">
+            {{ plan.createdDate | date : "dd/MM/yyyy" }}
+          </td>
+          <td class="py-4 px-2">{{ plan.deadline | date : "dd/MM/yyyy" }}</td>
+          <td class="py-4 px-2">
+            <p-tag
+              [severity]="getStatusSeverity(plan?.status?.statusId)"
+              [value]="plan.statusName"
+            ></p-tag>
+          </td>
+          <td class="py-3 px-2">
+            <button
+              class="action-button"
+              type="button"
+              (click)="onDetail(plan.initiationPlanId)"
+            >
+              <i class="bi bi-info-circle-fill"></i>
+            </button>
+          </td>
+        </tr>
       </tbody>
     </table>
     <div class="d-flex justify-content-center table-footer">
-      <div class="me-3 mt-3" *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
+      <div
+        class="me-3 mt-3"
+        *ngIf="schoolInitPlans && schoolInitPlans.length > 0"
+      >
         <pagination-controls
           previousLabel=""
           nextLabel=""
-          (pageChange)="   [  onTableDataChange($event), maxPageOnKeyUp()]"
+          (pageChange)="[onTableDataChange($event), maxPageOnKeyUp()]"
         >
         </pagination-controls>
       </div>
-      <div class="d-flex justify-content-center align-items-center"
-           *ngIf="schoolInitPlans && schoolInitPlans.length > 0">
-        <select (change)="loadDocuments()" class="form-select ng-untouched ng-pristine ng-valid"
-                [(ngModel)]="pageSize">
-          <option *ngFor="let option of recordPerPageOption" [value]="option">{{ option }}</option>
+      <div
+        class="d-flex justify-content-center align-items-center"
+        *ngIf="schoolInitPlans && schoolInitPlans.length > 0"
+      >
+        <select
+          (change)="loadDocuments()"
+          class="form-select ng-untouched ng-pristine ng-valid"
+          [(ngModel)]="pageSize"
+        >
+          <option *ngFor="let option of recordPerPageOption" [value]="option">
+            {{ option }}
+          </option>
         </select>
       </div>
     </div>
