--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.html
@@ -54,7 +54,9 @@
     rejectLabel="Hủy"
     key="confirm"
   ></p-confirmDialog>
-  <h4>Tạo template công việc cho các trường mầm non</h4>
+  <h5 class="mat-headline-5 fw-medium">
+    Tạo template công việc cho các trường mầm non
+  </h5>
   <div class="card">
     <p-treeTable
       [value]="assignments"
