--- a/src/app/features/post-login/dashboard/dashboard.component.html
+++ b/src/app/features/post-login/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h4>Dashboard</h4>
+<h5 class="mat-headline-5 fw-medium">Dashboard</h5>
 <div class="card" style="width: 400px">
   <p-chart type="pie" [data]="basicData" [options]="basicOptions"></p-chart>
 </div>
