--- a/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-create/guidance-document-create.component.html
@@ -5,7 +5,7 @@
   [progress]="'Đang tạo mới văn bản bổ sung'"
   [complete]="'Tạo mới văn bản bổ sung thành công'"
 ></app-loading-complete-dialog>
-<h2>Tạo văn bản bổ sung</h2>
+<h5 class="mat-headline-5 fw-medium">Tạo văn bản bổ sung</h5>
 <form [formGroup]="guidanceForm">
   <div class="row">
     <div class="form-group col-md-7">
