--- a/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-detail/guidance-document-detail.component.html
@@ -13,7 +13,7 @@
     <iframe [src]="safePdfUrl" width="100%" height="105%"></iframe>
   </ng-template>
 </p-dialog>
-<h2>Chi tiết văn bản chỉ đạo</h2>
+<h5 class="mat-headline-5 fw-medium">Chi tiết văn bản chỉ đạo</h5>
 
 <div class="row">
     <div class="col-md-7 mt-5">
