--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -28,7 +28,7 @@
 <p-toast position="top-right" key="deleteInComplete"></p-toast>
 <div class="container-fluid">
   <div class="row">
-    <h4 class="mb-3">Chi tiết quyết định kiểm tra</h4>
+    <h5 class="mat-headline-5 fw-medium mb-3">Chi tiết quyết định kiểm tra</h5>
     <div class="row">
       <div class="col-md-12 d-flex flex-row mb-2 report-button">
         <button
