--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -1,5 +1,7 @@
 <span>breadcrumb</span>
-<h4 class="mb-4">Kế hoạch thực hiện nhiệm vụ năm học</h4>
+<h5 class="mat-headline-5 fw-medium mb-4">
+  Kế hoạch thực hiện nhiệm vụ năm học
+</h5>
 <p-toast></p-toast>
 <app-loading-complete-dialog
   [visible]="isLoading"
