--- a/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.html
+++ b/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.html
@@ -93,7 +93,7 @@
   <ng-template pTemplate="caption">
     <div class="d-flex justify-content-between align-items-center">
       <div>
-        <h6>Danh sách hồ sơ {{ school?.schoolName }}</h6>
+        <h5 class="mat-headline-5 fw-medium">Danh sách hồ sơ {{ school?.schoolName }}</h5>
       </div>
     </div>
   </ng-template>
