--- a/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document-list/guidance-document-list.component.html
@@ -2,7 +2,7 @@
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
 />
-<h2>Tra cứu văn bản bổ sung</h2>
+<h5 class="mat-headline-5 fw-medium">Tra cứu văn bản bổ sung</h5>
 <div class="table-container">
   <div
     class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
