--- a/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan-list/inspection-plan-list.component.html
@@ -2,7 +2,7 @@
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
 />
-<h2>Danh sách kế hoạch thanh tra</h2>
+<h5 class="mat-headline-5 fw-medium">Danh sách kế hoạch thanh tra</h5>
 <p-toast key="error" position="top-right"></p-toast>
 <div class="table-container">
   <div
