--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-list/school-initiation-plan-list.component.html
@@ -3,7 +3,7 @@
   href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
 />
 <p-toast key="error" position="top-right"></p-toast>
-<h2>Tra cứu kế hoạch thực hiện</h2>
+<h5 class="mat-headline-5 fw-medium">Tra cứu kế hoạch thực hiện</h5>
 <div class="table-container">
   <div
     class="my-4 row advance-search container-fluid d-flex flex-row justify-content-between"
