--- a/src/app/features/post-login/school-list/school-list.component.html
+++ b/src/app/features/post-login/school-list/school-list.component.html
@@ -8,7 +8,7 @@
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   crossorigin="anonymous"
 />
-<h2>Danh sách các trường</h2>
+<h5 class="mat-headline-5 fw-medium">Danh sách các trường</h5>
 <div class="d-flex justify-content-end mb-3" *ngIf="!isDirector">
   <button
     pButton
